syntax = "proto3";
package com.omniview.pluginsdk;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";

import "proto/resource.proto";

option go_package = "./proto";

// An active port forwarding session that is used to forward network traffic
// from a remote resource to the local machine. Common use cases include:
// - Kubernetes port forwarding
// - AWS SSM port forwarding
// - SSH port forwarding
message PortForwardSession {
  string id = 1;
  int32 source_port = 2;
  int32 destination_port = 3;
  PortForwardProtocol protocol = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  map<string, string> labels = 7;

  enum SessionState {
    ACTIVE = 0;
    PAUSED = 1;
    STOPPED = 2;
    FAILED = 3;
  }
  SessionState state = 8;
  PortForwardSessionEncryption encryption = 9;

  oneof connection {
    PortForwardResourceConnection resource_connection = 20;
    PortForwardStaticConnection static_connection = 21;
  }
}

enum PortForwardProtocol {
  TCP = 0;
  UDP = 1;
}

// Port forwarding can happen to a resource via it's resource parameter, or via a static connection
// to a specific address and port. This message encapsulates the options for the connection
// to a resource.
message PortForwardResourceConnection {
  string connection_id = 1;
  string plugin_id = 2;
  string resource_id = 3;
  string resource_key = 4;
  google.protobuf.Struct resource_data = 5;
}

message PortForwardStaticConnection {
  // IPv4 or IPv6 address
  string address = 1;
}

message PortForwardSessionEncryption {
  bool enabled = 1;
  string algorithm = 2;
  string key = 3; 
}

// Options for creating a new port forwarding session
message PortForwardSessionOptions {
  int32 source_port = 1;
  int32 destination_port = 2;
  PortForwardProtocol protocol = 3;
  map<string, string> labels = 4;
  map<string, string> params = 5;
  PortForwardSessionEncryption encryption = 6;
  oneof connection {
    PortForwardResourceConnection resource_connection = 10;
    PortForwardStaticConnection static_connection = 11;
  }
}

// ===================== REQUESTS/RESPONSES ===================== //

message PortForwardSessionByIdRequest {
  string id = 1;
}

message FindPortForwardSessionRequest {
  string resource_id = 1;
  string connection_id = 2;
}

message PortForwardSessionByIdResponse {
  PortForwardSession session = 1;
}

message PortForwardSessionListResponse {
  repeated PortForwardSession sessions = 1;
}

message GetSupportedPortForwardTargetsResponse {
  repeated string resources = 1;
}


// ===================== SERVICE ===================== //

service NetworkerPlugin {
  // Resource Forwarding Management 
  rpc GetSupportedPortForwardTargets(google.protobuf.Empty) returns (GetSupportedPortForwardTargetsResponse);
  rpc GetPortForwardSession(PortForwardSessionByIdRequest) returns (PortForwardSessionByIdResponse);
  rpc ListPortForwardSessions(google.protobuf.Empty) returns (PortForwardSessionListResponse);
  rpc FindPortForwardSessions(FindPortForwardSessionRequest) returns (PortForwardSessionListResponse);
  rpc StartPortForwardSession(PortForwardSessionOptions) returns (PortForwardSessionByIdResponse);
  rpc ClosePortForwardSession(PortForwardSessionByIdRequest) returns (PortForwardSessionByIdResponse);
}
